@@ -421,6 +421,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-7916. 'reportBadBlocks' from datanodes to standby Node BPServiceActor
     goes for infinite loop (vinayakumarb)
 
+    HDFS-5215. dfs.datanode.du.reserved is not considered while computing
+    available space ( Brahma Reddy Battula via Yongjun Zhang)
+
 Release 2.7.0 - UNRELEASED
 
   INCOMPATIBLE CHANGES
